[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "animation-engine"
version = "1.0.0"
description = "Animation authoring tool for Game Engine for Teaching (vendored from Mikester9000/Animation-Engine)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["animation", "skeletal", "keyframe", "game-engine", "exporter"]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["animation_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
